--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -283,7 +283,7 @@
             </b>
           </div>
         </div>
-        <button type="button" class="btn btn-dark">結帳</button>
+        <button type="button" class="btn btn-dark btn-checkout">結帳</button>
       </div>
     </div>
     <!-- 結帳小計 start -->
@@ -374,9 +374,14 @@
   <div class="load-pic">
     <img src="/static/css/icon/colorbook-load.png" class="book-p">
   </div>
+  <div style="text-align: center;">
+    <small>Loading...</small>
+  </div>
 </div>
 
   <!-- third parties -->
+  <script src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=fetch"></script>
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
